# grpc-haskell-example

./: README.md  grpc-haskell-example.cabal  route_guide.proto  stack.yaml
app/: Client.hs  Schema.hs  Server.hs
src/RouteGuide/: Schema.hs
