name:               grpc-haskell-example
version:            0.1.0.0

-- synopsis:
-- description:
homepage:           https://github.com/y-taka-23/grpc-haskell-example#readme
author:             Yuto Takahashi <ytaka23dev@gmail.com>
maintainer:         Yuto Takahashi <ytaka23dev@gmail.com>
copyright:          Copyright (C) 2021 Yuto Takahashi
license:            Apache-2.0
license-file:       LICENSE
category:           Web
build-type:         Simple
cabal-version:      >=1.10
extra-source-files: README.md

library
  hs-source-dirs:   src
  exposed-modules:  RouteGuide.Schema
  ghc-options:      -Wall
  default-language: Haskell2010
  build-depends:
      base            >=4.12  && <5
    , aeson
    , mu-protobuf     >=0.4.0
    , mu-schema       >=0.3.1
    , text

executable client
  hs-source-dirs:   app
  main-is:          Client.hs
  ghc-options:      -Wall
  default-language: Haskell2010
  build-depends:
      base            >=4.12  && <5
    , grpc-haskell-example
    , conduit
    , mu-grpc-client  >=0.4.0
    , optparse-applicative
    , random

executable server
  hs-source-dirs:   app
  main-is:          Server.hs
  ghc-options:      -Wall
  default-language: Haskell2010
  build-depends:
      base            >=4.12  && <5
    , grpc-haskell-example
    , aeson
    , bytestring
    , conduit
    , containers
    , mtl
    , mu-grpc-server  >=0.4.0
    , mu-rpc          >=0.4.0
    , network
    , optparse-applicative
    , safe-exceptions
    , stm
    , time
    , unix
    , warp
    , warp-tls
